--- a/detalhes.html
+++ b/detalhes.html
@@ -99,12 +99,17 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Cálculo de dias desde o registro
-            const dataRegistro = '15/05/2024';
-            const [dia, mes, ano] = dataRegistro.split('/');
-            const diff = new Date() - new Date(ano, mes-1, dia);
-            const dias = Math.floor(diff / (1000 * 60 * 60 * 24));
-            document.getElementById('dias-detalhe').textContent = 
-                `${dias} ${dias === 1 ? 'dia' : 'dias'}`;
+            function calcularDias(dataRegistro) {
+                const [dia, mes, ano] = dataRegistro.split('/');
+                const hoje = new Date();
+                const dataReg = new Date(ano, mes-1, dia);
+
+                hoje.setHours(0, 0, 0, 0);
+                dataReg.setHours(0, 0, 0, 0);
+                    
+                const diff = hoje - dataReg;
+                return Math.floor(diff / (1000 * 60 * 60 * 24));
+            }
 
             // Coordenadas do registro
             const lat = -20.435361;
