correção de chamada de togglePasswordVisibility

--- a/cadastro.html
+++ b/cadastro.html
@@ -162,7 +162,7 @@
                         <!-- Botão de mostrar/esconder senha -->
                         <button 
                             type="button" 
-                            onclick="togglePassword('senha')"
+                            onclick="togglePasswordVisibility('senha', 'eyeIcon-senha')"
                             class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-primary focus:outline-none"
                             aria-label="Mostrar senha"
                             aria-controls="senha">
@@ -192,7 +192,7 @@
                         <!-- Botão de mostrar/esconder senha -->
                         <button 
                             type="button" 
-                            onclick="togglePassword('confirmacaoSenha')"
+                            onclick="togglePasswordVisibility('confirmacaoSenha', 'eyeIcon-senha')"
                             class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-primary focus:outline-none"
                             aria-label="Mostrar senha"
                             aria-controls="confirmacaoSenha">
