--- a/detalhes.html
+++ b/detalhes.html
@@ -96,6 +96,7 @@
 
     <!--Script necessário para o mapa-->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" defer></script>
-    <script src="assets/js/detalhes.js" defer></script>    
+    <script src="assets/js/detalhes.js" defer></script>
+    <script src="assets/js/sharedUtils.js" defer></script>   
 </body>
 </html>
