correção de id inexistente nos scripts (dias-detalhe)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <td class="py-3 px-4">REG-20240001</td>
                             <td class="py-3 px-4">Buraco na via</td>
                             <td class="py-3 px-4">15/05/2024</td>
-                            <td class="py-3 px-4" id="dias-registro">0 dias</td>
+                            <td class="py-3 px-4" id="dias-detalhe">0 dias</td>
                             <td class="py-3 px-4"><a href="detalhes.html?id=REG-20240001" class="text-primary hover:underline">Detalhes</a></td>
                         </tr>
                     </tbody>
